--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "react-scripts test --watchAll=false"
+    "test": "vitest"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -30,7 +30,7 @@
     "react-leaflet": "^5.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.3.0",
     "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
@@ -41,6 +41,7 @@
     "twind": "^0.16.19"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.2",
@@ -53,10 +54,13 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.24",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-scripts": "^3.0.1",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.4.14"
+    "vite": "^6.2.1",
+    "vitest": "^3.0.8"
   }
 }
