--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,10 +51,11 @@
     "daisyui": "^4.11.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
+    "npm-force-resolutions": "^0.0.10",
     "postcss": "^8.4.24",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -62,4 +63,5 @@
     "vite": "^6.2.1",
     "vitest": "^3.0.8"
   }
+
 }
